Fix View header title alignment

--- a/[ui] View Header tweaks.css
+++ b/[ui] View Header tweaks.css
@@ -12,7 +12,6 @@
 }
 .view-header-title-container .view-header-title {
     color:var(--tx2) !important;
-    transform: translate(0,1px)
 }
 .view-header-title-container .view-header-title:hover,
 .view-header-title-container .view-header-title:focus {
